Update checkout action to v3

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,10 +22,10 @@ jobs:
         env:
           VAULT_DEV_ROOT_TOKEN_ID: "simple"
         ports:
-          - 8200:8201
+          - 8200:8200
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: terraform init
         uses: robertdebock/terraform-action@1.1.2
         with:
@@ -55,3 +55,6 @@ jobs:
         env:
           TF_CLI_ARGS: "-input=false -auto-approve"
         if: ${{ always() }}
+      - name: check container logs
+        run: 'docker logs $(docker ps -aql)'
+        if: ${{ failure() }}
